try to fix overflow

--- a/src/css/Illustration.css
+++ b/src/css/Illustration.css
@@ -33,6 +33,9 @@
   height: 70%;
 }
 @media screen and (min-width: 1000px) {
+  .Image-Container {
+    overflow: hidden;
+  }
   .Image-Container .Illustration-Wrapper {
     position: relative;
     z-index: 2;
@@ -41,6 +44,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: unset;
   }
 }
 /* .Image-Container {
